--- a/project_2_Notebook.ipynb
+++ b/project_2_Notebook.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "   ## PROJECT TWO: ANALYSIS AND HYPOTESIS TESTING OF SURVEY DATA\n",
+    "   ## PROJECT ONE: ANALYSIS AND HYPOTESIS TESTING OF SURVEY DATA\n",
     "\n",
     "In this project, I assessed and explored the health behaviors and risk factors using \n",
     "the Data from the National Health Interview Survey (NHIS). The National Health Interview Survey \n",
