--- a/Spark_MLlib.ipynb
+++ b/Spark_MLlib.ipynb
@@ -6,6 +6,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "Write a Spark ML-lib program to predict flight delays for certain airline UMAIR. UMAIR operates throughout the US. Your historical data is generated through a randomly generated program."
+   ]
+  },
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import findspark\n",
     "findspark.init()"
    ]
