--- a/Spark_MLlib.ipynb
+++ b/Spark_MLlib.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Write a Spark ML-lib program to predict flight delays for certain airline UMAIR. UMAIR operates throughout the US. Your historical data is generated through a randomly generated program."
+    "Write a Spark ML-lib program to predict flight delays for certain airline UMAIR. UMAIR operates throughout the US."
+    "Your historical data is generated through a randomly generated program."
    ]
   },
 {
