--- a/Create_FakeData.ipynb
+++ b/Create_FakeData.ipynb
@@ -24,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Created 9 functions for each columns to generate fake data"
+    "#### Created 9 functions for each columns to generate fake data"
    ]
   },
   {
