--- a/Remove_punctuation_stopwords.ipynb
+++ b/Remove_punctuation_stopwords.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Remove punctuations, stopwords, numbers and so on from the given text and doc files"
+    "Remove punctuations, stopwords, digits and so on from the given text and doc files"
    ]
   },
   {
