--- a/project_1_Notebook.ipynb
+++ b/project_1_Notebook.ipynb
@@ -23,7 +23,7 @@
     "## Main Summary\n",
     "***\n",
     "### The Analysis has two main Parts:\n",
-    "##### Part 1: Explanatory Data analysis (EDA)\n",
+    "##### Part 1: Explaratory Data analysis (EDA)\n",
     "##### Part 2: Main Data Analysis Using Statistical Methods for Hypothesis Testing\n",
     "######  Hypothesis Test used:  chi-square test, z test, t test, and Anova.\n",
     "### Data: NHIS data that is found here: https://www.cdc.gov/nchs/nhis/2019nhis.htm\n"
