--- a/project_1_Notebook.ipynb
+++ b/project_1_Notebook.ipynb
@@ -729,7 +729,7 @@
     }
    ],
    "source": [
-    "# used describe() to see the minimum and maximum values for some numeric columns (Continuous Data), such as hieght, weight and height.\n",
+    "# used describe() to see some statasical summary for some numeric columns (Continuous Data), such as hieght, weight and height.\n",
     "# Note: This method is not useful for catagorical data except count.\n",
     "NHIS_data.describe() "
    ]
